# typed-undefined

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg  test_undefined.py  test_undefined.yml  undefined.py  undefined_mypy.py
.github/workflows/: test.yml
tests/: test_undefined.py  test_undefined.yml
undefined/: __init__.py  mypy.py
