[tool.poetry]
name = "typed-undefined"
version = "0.1.0"
description = "typed undefined"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/uriyyo/typed-undefined"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
