[tool.poetry]
name = "typed-undefined"
version = "0.1.0"
description = "typed undefined"
authors = ["Yurii Karabas <1998uriyyo@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/uriyyo/typed-undefined"

packages = [
    { include = "undefined" },
]

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
pytest-mypy-plugins = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''